# roi_layout

./: CMakeLists.txt  LICENSE  README.md
images/: kite.json
include/: Cluster.h  ROI_layout.h  utils.h
python/: ROI_layout.py  demo.py  point.py  rectangle.py  rectangles_layout.py
src/: CMakeLists.txt  Cluster.cpp  ROI_layout.cpp  main.cpp  utils.cpp
